Fix alignment issues and make table headers sticky in Overview page

--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -16,6 +16,10 @@
   flex-wrap: nowrap;
 }
 
+.overflow-inherit {
+  overflow: inherit !important;
+}
+
 .overflow-wrap-normal {
   overflow-wrap: normal
 }
