--- a/src/assets/scss/custom/pages/_overview.scss
+++ b/src/assets/scss/custom/pages/_overview.scss
@@ -12,7 +12,6 @@
 
 .table-column-titles {
   position: sticky;
-  top: 20px;
-  height: 100px;
+  top: 75px;
   z-index: 1;
 }
